# adb-powerhub

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  DESIGN.md  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.lock.toml  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: AppIcons.java  AppLabels.java  app_icons.dex  app_labels.dex  compile_dex.sh  compile_icons_dex.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: about.rs  adb.rs  icons.rs  lib.rs  main.rs  scrcpy.rs  settings.rs
src-tauri/tests/fixtures/: README.md
src/__tests__/: setup.ts
src/components/: AppActions.vue  AppDetail.vue  AppList.vue  AppPreview.vue  AppSidebarLeft.vue  AppSidebarRight.vue  AppToast.vue  ConnectCard.vue  ConnectPanel.vue  DeviceStatsCard.vue  LogcatFilterBar.vue  LogcatStream.vue  LogcatToolbar.vue  MirrorCard.vue  NetworkInfoRow.vue  NetworkInfoTooltip.vue  PresetForm.vue  PresetPanel.vue  ScreenshotGrid.vue  ScreenshotLightbox.vue  ScreenshotTruncationBanner.vue  TerminalCard.vue  TitleBar.vue
src/composables/: useApkDropZone.ts  useDropdownRegistry.ts  useFileKeyboard.ts  useFileSelection.ts  useImageLazy.ts  useKeyboardShortcuts.ts  useLogcatChannel.ts  useLongPress.ts
src/stores/: about.ts  apps.ts  connectionHistory.ts  device.ts  fileExplorer.ts  (+7 more)
(+38 files in other folders)
